<resources>
    <string name="app_name">衣拍即合</string>
    <string name="des_man_black">\u3000\u3000黑色是非常经典的西服穿搭，它给人一种成熟干练的气质，搭配黑色领带更加能体现一个人的稳重和智慧，同时黑色西装也有修身效果，搭配白色衬衫还能给人一种干净利落的的感觉，但如果想要追求潮流范或者穿出不一样的气质，那么也可以搭配一些其他的颜色，比如黑色的西装里面搭配黄色高领衫，叠穿红色衬衫。</string>
    <string name="des_man_blue">\u3000\u3000蓝色小西服配黑色领带白衬衣尽显年轻时尚，其间口袋处的白色条纹装饰以及棕色表带的手表和褐色墨镜的搭配尽显精致讲究。蓝色的西服能给人一种智慧的感觉，能给面试官一种遇到事情都能灵活处理的形象，搭配黑色领带及白衬衣让人不会觉得有不成熟的气质。同时，蓝色几乎适应所有男士的型格，它可沉稳理性，又可阳光开朗。而蓝色存在于西装之上，更是大方的体现了睿智的绅士品格</string>
    <string name="des_man_gray">\u3000\u3000灰色西服能更好的凸显出自己的身材，能让人变得更加的精神，配上黑色领带和皮鞋，给人一种更加成熟及稳重的感觉，暗红色的表带的手表增添了整体的颜色搭配。而且，灰色西装更显成熟和老派，所以也更能凸显商务男士的稳重与儒雅，灰色西装搭配不同的单品还能让灰色西装穿出不一样的气质，比如与白色等浅色单品搭配就变得清新起来了。</string>
    <string name="des_man_gray2">\u3000\u3000灰色西服能更好地修饰自身的体型，让人显得更加的丰满强壮，里面搭配白色衬衫显得人更加的有精气神，黑色的领带皮鞋及墨镜给人一种更加成熟稳重且干练的感觉。而且，灰色西装更显成熟和老派，所以也更能凸显商务男士的稳重与儒雅，灰色西装搭配不同的单品还能让灰色西装穿出不一样的气质，比如与白色等浅色单品搭配就变得清新起来了。</string>
    <string name="des_man_tibetan_blue">\u3000\u3000藏蓝西装穿着起来沉稳大气，金边领带和口袋配饰尽显精致讲究，对于求职者来说能给面试官留下更好的印象。藏蓝色西服显得人更加的干练，同时搭配金边领带和口袋配饰给人一种稳重中又不死板的气质。</string>

    <string name="des_woman_black_and_white">\u3000\u3000选择服装不在于多而在于精。职业装多以黑白为主色调，黑色代表坚定，白色代表自信，所以黑白色成为职业装永恒经典搭配。这套服装以简单的黑白配为主，没有过多的修饰，只是在领口的剪裁和白色一步裙的腰带的搭配上和鞋子的装饰这些细节的处理上进行了精心处理，使它更能凸显女性的外秀慧中、成熟端庄。</string>
    <string name="des_woman_grey_stripes">\u3000\u3000灰色条纹的西服，长度在膝盖以上一点点的一步裙，浅色调的底衫显得女生稳重干练，把女性的柔美和精明强干融合的完美无瑕，配上一块质感不错且表盘较大的手表将会给整个着装加分，同时戴上手表会让手上多了一个注意力点，让人增加一分自信，但手表不能过大，正装场合是拒绝夸张的。</string>
    <string name="des_woman_grey_stripes2">\u3000\u3000灰色条纹的西服，长度在膝盖以上一点点的一步裙，浅色调的底衫显得女生稳重干练，把女性的柔美和精明强干融合的完美无瑕，配上一块质感不错且表盘较大的手表将会给整个着装加分，同时戴上手表会让手上多了一个注意力点，让人增加一分自信，但手表不能过大，正装场合是拒绝夸张的。</string>
    <string name="des_woman_izzue">\u3000\u3000白色小领子的长袖衬衣配黑色西服式掐腰马甲和简单的黑色一步裙，使女生在清爽柔美的气质中又不失干练，配上黑色包以及深色高跟鞋更显成熟精明，加上浅色调的手表不失年轻人的活力</string>
    <string name="des_woman_OL">\u3000\u3000简约干练OL套装，职场好搭档，轻松打造职场魅力女神，凸显干练气质，气场十足。灰色西服上衣白色简单的衬衣配上干练的短发和灰色九分西裤展现出干练而执着的职场女性的风采。</string>
    <string name="des_woman_white">\u3000\u3000小领带褶皱白色衬衣配上女孩的衬托出女孩的干净柔美气质，剪裁简单黑色一步裙配上金色椭圆形细的黑色腰带和带金色装饰的黑色高跟鞋，使得整个人柔美中又透出精致干练。整套服装与女孩的气质完美贴合。红色手包和金色手表的搭配又提亮了整套服装的色彩，使得因穿职业装而略显规整的气质一下活泼了起来。</string>

    <string name="des_hair_man_fang">方脸：注意选择简洁一些的发型，最好不要有刘海。\n适合发型：侧分后梳、短直寸头、渐变飞机头、上梳碎发。</string>
    <string name="des_hair_man_chang">长脸：最好选择有层次的短发、两侧留一部分的侧分碎发；或者带有刘海的发型可以遮盖掉一部分的长度。\n适合发型：短碎发、短侧分、短刘海、自然刘海。</string>
    <string name="des_hair_man_ling">菱形脸：需要注意头顶的头发做蓬松，用一部分刘海遮住小额头；或者将太阳穴两侧的发型不剃净以增加头型上部的宽度；年纪稍长之后也可留下络腮胡增加下巴的宽度。\n适合发型：碎发、短刘海、侧分油头、自然刘海。</string>
    <string name="des_hair_man_edan">鹅蛋脸：选择发型比较容易，几乎什么发型都可以尝试。\n适合发型：碎发、蓬巴杜、底切背头、超短寸头、侧分碎发、侧分发、飞机头、短寸平头。</string>
    <string name="des_hair_man_yuan">圆脸：在选择发型的时候需要注意减小脸的宽度并增加脸的长度。\n适合发型：侧分后梳、渐变寸头、底切背头、渐变庞巴度。</string>

    <string name="des_hair_woman_fang">方脸：选择更有女人味的卷发可以帮助弱化棱角，不要选择过短的发型。不适合剪齐刘海，因为厚重的刘海会使棱角更突出。\n适合发型：短发斜刘海，内扣lob头，波浪长卷发。</string>
    <string name="des_hair_woman_chang">长脸：不适合选择长直发，选择有点微卷的发型或增加刘海可以打乱线条感，从而减少脸的长度。不适合与头皮太贴合或者是挽在耳后的发型。\n适合发型：BOB头，中直发，波浪卷长发。</string>
    <string name="des_hair_woman_ling">菱形脸：菱形脸的主要需要修饰的特点是颧骨太突出，多选用八字刘海。\n适合发型：bob头，lob头，八字刘海长卷发。</string>
    <string name="des_hair_woman_edan">鹅蛋脸：完美的脸型，可以尝试任何发型！一般而言，头发长度为下巴到肩膀的中长发最佳，可以说是职场最佳的发型长度。\n适合发型：自然刘海短发，偏分中直发，高扎马尾。</string>
    <string name="des_hair_woman_yuan">圆脸：不适合中分紧贴头皮的发型、短发和小碎发，选择斜刘海或头顶蓬松的全扎发型可以有效的拉长脸型。选择长卷发可以改善厚重感。\n适合发型：侧lob头，扎发，长卷发。</string>

    <string name="des_glasses_fang">脸型偏方的人两颊较宽，脸较短，看起来刚强。为柔和脸部线条，选用略带曲线的框架可让脸型看起来更柔和，缓和过宽的两颊。</string>
    <string name="des_glasses_chang">长方形脸因脸部较长，框架应尽可能多地覆盖脸部，并选择高度较高的镜片，以减少长脸的印象。</string>
    <string name="des_glasses_ling">菱形脸应该通过脸部的宽窄不同进行加宽或者进行修饰，建议选择宽度和脸部宽度差不多的圆形眼镜，圆形眼镜可以打破上半部分的方脸线条，眼镜下轮廓线柔和了颧骨。</string>
    <string name="des_glasses_edan">完美的脸型，基本可以尝试任何外形的眼镜。</string>
    <string name="des_glasses_yuan">脸型偏方的人两颊较宽，脸较短，看起来刚强。为柔和脸部线条，选用略带曲线的框架可让脸型看起来更柔和，缓和过宽的两颊。</string>

    <string name="m_edan">被认为是最理想的脸型，近乎完美的比例。\n脸型的长度与形状平衡，可尝试各种发型。\n拥有鹅蛋脸型的小伙伴很幸运，韩国歌手G Dragon就算是鹅蛋脸代表之一，你可以尽情尝试不同发型变化。</string>
    <string name="m_fang">被下颚宽大，棱角过于分明。\n需要从视觉上拉长脸型。\n方形脸男士看起来更有阳刚之气，可选择利落的短发，不要选择过长、中分等过于厚重的发型;另外短鬓角发型可以缩小视觉宽度。</string>
    <string name="m_yuan">没有角度或突出的线条。\n有亲切感，应选择稍带个性风格的发型。\n首要选择是头顶发量及长度够长，来增加脸部视觉长度;具有线条感以及可以制造“高度”的发型。</string>
    <string name="m_chang">高的前额和长的下巴。\n注意头发长短平衡，如果侧边过短头顶过长，就更易显脸长。\n长形脸的男士发型选择余地较多，刘海最好，把额头遮住些，这样能缩减脸部过长的问题，平衡曲线;如想让头顶头发留长，两侧的头发则不能太短果。</string>
    <string name="m_ling">窄下巴、窄额头、突出的颧骨。\n菱角分明并且非常有立体感。\n不建议头发剪过短，也要避免过短的侧边削减，避免选择服帖、顺直的发型，可利用发量及刘海或层次来修饰颧骨宽度，增加上部发量来平衡中宽、上 下窄的问题。</string>
    <string name="w_fang">前额最宽处，颧骨最宽处与下颌最宽处距离几乎差不多。\n“十字交叉法”测出的比例约为1：1或是1：1.5。\n柔软浪漫的卷发自然地掩饰了脸部的“刚硬”部分，发尾部分可以修剪出更多层次。\n放弃贴头皮的超短发。\n长长的碎直发也是不错的选择，让发丝自然飘重，整张脸庞变得曲线玲珑。\n长度超过下巴的BOB头也可以尝试。\n大侧分的轮廓制造不对称的重量感，破除了方脸形状。</string>
    <string name="w_yuan">前额最宽处，颧骨最宽处与下领最宽处距离几乎差不多。\n脸颊丰满，颧骨偏宽“十字交叉法”测出的比例约为1：1。\n不妨尝试发梢被打得薄薄的、削得略尖的BOB头。\n柔顺服帖，有层次感的直长发应该盖过脸颊，长及锁骨位置，卷发会增加脸部体积，可以考虑将头发留长，只在肩膀位置做出卷度，因为直发的纵向线条则在视觉上减弱圆脸的宽度。\n在发旋的相反-侧做出分发线，可以增加顶部头发的高度，突出纵长的轮廓，可以参考Rihanna的锥形BOB造型。\n你的颧骨即使再好看，圆润的脸颊也会将其掩盖，使得圆脸偏于平板而缺少个性，因此建议选择长刘海与侧分刘海，加强脸部立体感。</string>
    <string name="w_ling">脸型立体，额头和下颚宽度差不多。\n适合饱满的刘海(侧分刘海，遮住眉毛的长留海)。后脑勺的头发要尽量蓬松，整体线条更加细长柔和。\n柔软浪漫的卷发自然地掩饰了脸部的“刚硬”部分，发尾部分可以修剪出更多层次。\n放弃贴头皮的超短发。\n长长的碎直发也是不错的选择，让发丝自然飘重，整张脸庞变得曲线玲珑。\n长度超过下巴的BOB头也可以尝试。</string>
    <string name="w_chang">长形脸的“十字交又法”比例约为1：1.5之间。\n头顶的头发最好尽量柔顺，脸部两侧头发尽量蓬松。\n刘海直是长形脸姑娘的好伙伴，直发的齐刘海确实可以修饰额头，不过最好将齐刘海吹出一个美丽的弧度，才能让脸型线条看上去更加圆滑饱满，是个聪明的视觉转移法。\n长款BOB最为适合，重要的是其长度适中。\n脸部不能出现过多的垂直线条，打理时两侧要制造出蓬松卷曲，以加宽脸颊，突出圆润感。</string>
    <string name="w_edan">如果你脸的长度是宽度是1.5倍，那么恭喜你，你拥有均云理想的脸型——椭圆形， 俗称瓜子脸或是鹅蛋脸。 不管是长发还是短发，直发卷发，基本上任何发型都可以hold住并能达到很和谐的效果，是传统审美眼光中的最佳。\n如果你想要减龄或者是更佳俏皮可爱的造型，可以尝试有棱角的BOB头，剪短耳朵以下的头发，让碎发来点缀出古灵精怪的感觉，还可以露出漂亮的下巴。\n想突出熠熠生辉的眼睛吗?不妨打理出随意感较强的斜刘海。\n在炎炎夏日里，把全部头发扎成马尾或是盘起可爱的丸子头，露出光洁的额头吧，有很优雅的女神范儿拥有鹅蛋脸型的小伙伴很幸运，韩国歌手G Dragon就算是鹅蛋脸代表之一，你可以尽情尝试不同发型变化。</string>

    <string name="m_black">黝黑色皮肤：象牙白、茶色、蓝色、粉色、紫色。</string>
    <string name="m_wheat">小麦色皮肤：浅色调的蓝，中色调到浅色调的灰、绿。小麦色皮肤的人一般适合任何颜色。</string>
    <string name="m_white">白皙皮肤：浅色调的蓝、中色调到浅色调的灰、绿。白皙皮肤的人-般适合任何颜色。</string>
    <string name="m_yellow">偏黄色皮肤：象牙白、茶色、粉色、紫色。</string>
    <string name="w_black">偏黑与黝黑的皮肤可是两种不同的概念，偏黑的皮肤就如同小麦色肌肤，穿白色还可以，但是如果是黝黑的皮肤就不要穿过于鲜艳颜色的服装，反而选择那种黑色深色系的颜色更好些。\n相信每位MM都很讨厌黝黑的肌肤吧，不管怎么穿衣服，不管怎么用化妆护肤品都不能使自己变白，不如穿上黑色的衣服怎么样?黑对黑，在黑色服装衬托下，黝黑的肌肤显得更加深邃，也许还会让你变得很有气质。</string>
    <string name="w_wheat">小麦色的肌肤偏黑，搭配上白色的裙子，两者就会形成一个鲜明对比，很合称，欧美的人强调阳光、健康、自信，而东方更是崇尚大方，所以可表现这款以蕾丝元素的裙子，很好穿出优雅动人一面 。\n小麦色肌肤适合的服装颜色其实很广泛，黑白色都可以，当然也可以选择灰色、深蓝色这些颜色，或者玫红这种鲜艳的颜色，不过记得不要穿翠绿和茶绿，因为反差太大也不好，今年这种深蓝色的裙子与小麦色肌肤很搭，雪纺材质更显得飘逸。</string>
    <string name="w_white">天生就拥有白皙肌肤的妹纸就是让人羡慕呢，皮肤白的妹纸就是可以随便穿，不管是暗色的，还是亮色，花花、素色都可以轻松驾驭，想要穿的鲜艳一点， 就选择红绿蓝紫橙色，想要穿的沉稳些，就选择黑白灰颜色服装。\n身材好的人无论穿什么款式的服装都好看，皮肤好颜色更是随便穿，皮肤白就是一种优势， 选择服装随意点心情好就穿点杏色配印花，大V领露出光洁锁骨，超迷人。</string>
    <string name="w_yellow">虽然说都是黄种人，但是皮肤的色差上却是非常大，总的来说，这种偏黄色的肌肤带这一点点的黄，这种偏黄色的肌肤最好不要穿黄色、绿色、深紫色的服装，因为那样子会令你肌肤变得更加黄。\n偏黄色肌肤的人可以选择粉色的服装，粉色以轻快、可爱甜美为主，充满阳光和生机气息，穿上这样颜色的服装你就如同精灵一样灵动，会让你第一时间忽略你的皮肤。</string>

    <string name="m_date">在约会时，男士穿搭以休闲绅士为主，但也不能太过休闲或者庄重，男士可选择较有设计感的上衣搭配同色系长裤，即新颖又百搭。当然也可以选择男友力爆棚的外套或者绅士又有设计感的衬衫，给自己营造良好的形象。</string>
    <string name="m_sport">男士在运动时，穿搭以舒适为主，美观为辅。上衣可以选择适合自己肤色的T恤，汗衫或者运动背心，下衣一件宽松版型的运动短裤再合适不过了。根据气候选择是否加一件外套，当然如果要叠穿的话，注意颜色搭配要美观。</string>

    <string name="w_date_A">A型身材在亚洲非常普遍，而且现在的人常坐办公室也会慢慢变成A型身材。所以A型身材的穿衣要点在于“强调上半身”和“弱化下半身”，把亮点都放在上半身，下半身便会从视觉上显瘦。</string>
    <string name="w_date_H">如果要想穿出时尚感，多层次的穿搭一定是最基础的原则之一。可以选择内深外浅/外深内浅的方式增加视觉上的层次；或者修身上装搭配喇叭裤/A字裙，紧身下装搭配宽松飘逸的上装，凸显材质上的造型层次感，打造前凸后翘的曲线。</string>
    <string name="w_date_O">在约会时，O型身材的女士可以穿收腰设计的衣服或衣服同色的腰带，但不要用夸张的腰带制造亮点；选择V领或方领上衣露出脖颈线条是合理的，此外花里胡哨的点缀不如一身简约大方的设计好看。在选择裙子时，可以更倾向于小碎花类的裙子，可以显得更加可爱动人。</string>
    <string name="w_date_X">X型身材又称女性完美身材，搭配方法有很多，在约会时，女士可以选择上紧下宽的连衣裙，腰带勾勒出纤细的腰身，伞裙设计能更加突出腿部的纤细。法式碎花裙也是一种不错的选择，更能营造约会的气氛~</string>
    <string name="w_date_Y">Y型身材过宽的肩线，可以说是欧美风的“天敌”，想要弱化肩线，就要尽量去选择简单剪裁的落肩上装，不仅能够达到收缩肩部的效果，而且带来的随性自然感也是约会必备~女士可以选择短上衣加高腰短裤/长裤的搭配，可以更显腿部纤长。</string>

    <string name="w_shopping_A">A型身材又叫梨形身材，臀部和大腿往往比较粗，腿部曲线圆润。上半身瘦，有着窄小的肩部。长胖的时候，脂肪容易集中在下半身臀部和腿部的位置。梨形身材的搭配原则就是：凸显上半身，弱化下半身。建议：廓形上建议上松下紧或者上紧下松，但要注意比例协调。颜色选择上浅下深或上明下暗。</string>
    <string name="w_shopping_H">H型身材穿衣的重点是“刚刚好”。既然腰线不明显，女士可以从沙漏型剪裁的连身裤装或伞裙上身，打造出明显曲线，上衣尽量扎入下装来提升腰际线条，也能多应用腰带这类配件打造明显腰线，保持上半身和下半身的平衡。</string>
    <string name="w_shopping_O">对于O型身材的女士来说，不要穿太松或太紧的衣服，太松会让整个人的上半身显得臃肿，太紧会暴露自己的缺点；在穿衣时，可以强化腰线，如可以选择比较宽的腰带将上半身与下半身衔接，上衣扎进下衣里可以视觉上拉长身高；可以选择一个斜挎包，将上身轮廓显示出来，更加显瘦。</string>
    <string name="w_shopping_X">X型身材又称女性完美身材，搭配方法有很多，在逛街时，女士可以选择上紧下宽的连衣裙，腰带勾勒出纤细的腰身，伞裙设计能更加突出腿部的纤细。</string>
    <string name="w_shopping_Y">Y型身材特点是颈短、肩宽、胸部丰满、胯窄，腿部比较纤细。 所以搭配衣服就需要要扬长避短了，使上身看起来更轻盈是搭配关键，其中连肩款式的外套和V领就是个不错的选择，当然逛街时背一个斜挎包，勾勒曲线是再好不过了。</string>

    <string name="HAIR_REC"><![CDATA[> 发型推荐 <]]></string>
    <string name="GLASS_REC"><![CDATA[> 眼镜推荐 <]]></string>
    <string name="REC_DES"><![CDATA[> 推荐描述 <]]></string>
    <string name="ACCESSORY_REC"><![CDATA[> 配件推荐 <]]></string>
    <string name="COLOR_REC"><![CDATA[> 颜色推荐 <]]></string>
    <string name="USER_INFO"><![CDATA[> 用户信息 <]]></string>
    <string name="CLOTH_REC"><![CDATA[> 服装推荐 <]]></string>

</resources>
